--- a/index.html
+++ b/index.html
@@ -584,31 +584,31 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/hm1.jpg" alt="">
+            <img src="images/1.jpg" alt="">
         </div>
         <div class="box">
-            <img src="images/hm2.jpg" alt="">
+            <img src="images/2.jpg" alt="">
         </div>
         <div class="box">
-            <img src="images/hm3.jpg" alt="">
+            <img src="images/3.jpg" alt="">
         </div>
         <div class="box">
-            <img src="images/hm4.jpg" alt="">
+            <img src="images/4.jpg" alt="">
         </div>
         <div class="box">
-            <img src="images/hm5.jpg" alt="">
+            <img src="images/5.jpg" alt="">
         </div>
         <div class="box">
-            <img src="images/hm6.jpg" alt="">
+            <img src="images/6.jpg" alt="">
         </div>
         <div class="box">
-            <img src="images/hm7.jpg" alt="">
+            <img src="images/7.jpg" alt="">
         </div>
         <div class="box">
-            <img src="images/hm8.jpg" alt="">
+            <img src="images/8.jpg" alt="">
         </div>
         <div class="box">
-            <img src="images/hm9.jpg" alt="">
+            <img src="images/9.jpg" alt="">
         </div>
 
     </div>
