--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
             
             <div class="swiper-slide">
                 <div class="box">
-                    <img src="images/shrestha.jpeg" alt="">
+                    <img src="images/shrestha.jpg" alt="">
                     <h3>shrestha banerjee</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci quisquam sunt nesciunt fugiat odit minus illum asperiores dolorum enim sint quod ipsam distinctio molestias consectetur ducimus beatae, reprehenderit exercitationem!</p>
                     <div class="stars">
