--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
             <img src="images/6.jpg" alt="">
         </div>
         <div class="box">
-            <img src="images/7.jpg" alt="">
+            <img src="images/7.jpeg" alt="">
         </div>
         <div class="box">
             <img src="images/8.jpg" alt="">
@@ -636,7 +636,7 @@
 
             <div class="swiper-slide">
                 <div class="box">
-                    <img src="images/ricky.jpeg" alt="">
+                    <img src="images/ricky.jpg" alt="">
                     <h3>debartha chakraborty</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci quisquam sunt nesciunt fugiat odit minus illum asperiores dolorum enim sint quod ipsam distinctio molestias consectetur ducimus beatae, reprehenderit exercitationem!</p>
                     <div class="stars">
@@ -764,6 +764,9 @@
             <div class="swiper-slide"><img src="images/4.jpg" alt=""></div>
             <div class="swiper-slide"><img src="images/5.jpg" alt=""></div>
             <div class="swiper-slide"><img src="images/6.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="images/7.jpg" alt=""></div>
+            <!-- <div class="swiper-slide"><img src="images/8.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="images/9.jpg" alt=""></div> -->
         </div>
     </div>
 
