--- a/index.html
+++ b/index.html
@@ -765,8 +765,8 @@
             <div class="swiper-slide"><img src="images/5.jpg" alt=""></div>
             <div class="swiper-slide"><img src="images/6.jpg" alt=""></div>
             <div class="swiper-slide"><img src="images/7.jpg" alt=""></div>
-            <!-- <div class="swiper-slide"><img src="images/8.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="images/9.jpg" alt=""></div> -->
+            <div class="swiper-slide"><img src="images/8.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="images/9.jpg" alt=""></div>
         </div>
     </div>
 
