--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
 
     </div>
 
-    <h1 class="credit"> created by <span> Debartha Chakraborty </span> | all rights reserved! </h1>
+    <h1 class="credit"> created by <span> Anitesh Kundu </span> | all rights reserved! </h1>
 
 </section>
 
